--- a/tt_core/templates/tt_core/base.html
+++ b/tt_core/templates/tt_core/base.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
+    <meta name="description" content="A community of people completing challenges every day">
+    <meta name="author" content="Tom Wallis & contributors">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>TweakToday</title>
     <link rel="stylesheet" href="https://indestructibletype.com/fonts/Jost.css" type="text/css" charset="utf-8" />
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'polls/skeleton.css' %}">
-    <link rel="stylesheet" href="{% static 'polls/normalize.css' %}">
+    <link rel="stylesheet" href="{% static 'tt_core/normalize.css' %}">
+    <link rel="stylesheet" href="{% static 'tt_core/skeleton.css' %}">
 </head>
 <body>
-{% block content %}
-{% endblock %}
+
+<div class="container">
+    <div class="row">
+        <div class="eleven columns" style="margin-top: 25%">
+            <h1>TweakToday</h1>
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
