--- a/tt_core/templates/tt_core/suggestions.html
+++ b/tt_core/templates/tt_core/suggestions.html
@@ -1,18 +1,18 @@
 {% extends 'tt_core/base.html' %}
 
 {% block content %}
-<div class="row">
-    <div class="eleven columns">
-        <p><a href="{% url 'tt_core:suggest_new_task' %}">Suggest a new task here!</a></p>
-    </div>
-</div>
-
 {% for suggestion in suggs %}
-    <div class="row">
-        <div class="nine columns">{{ suggestion.task_text }}</div><div class="two columns">vote button</div>
-        {% if suggestion.task_explainer %}<div class="eleven columns"><i>{{ suggestion.task_explainer }}</i></div>{% endif %}
+    <div class="row" style="margin-bottom: 4rem">
+        <div class="nine columns">{{ suggestion.task_text }}</div>
+        {% if user.is_authenticated %}
+        <form action="{% url 'tt_core:submit_vote' suggestion.pk %}" method="get" class="upvote_button">
+            <input type="submit" value="upvote" name="Submit" id="upvote_suggestion_{{suggestion.pk}}"/>
+        </form>
+        {% endif %}
+
+
+        {% if suggestion.task_explainer %}<div class="nine columns"><i>{{ suggestion.task_explainer }}</i></div>{% endif %}
     </div>
-    <br>
 {% empty %}
 There are no suggested tweaks right now!
 {% endfor %}
