Added ability to post new challenges, embossed important information, sorted suggestions by votes, implemented voting

--- a/tt_core/static/tt_core/skeleton.css
+++ b/tt_core/static/tt_core/skeleton.css
@@ -185,6 +185,9 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 p {
   margin-top: 0; }
 
+.embossed {
+  background-color: #ebebe5;
+}
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
