--- a/tt_core/templates/tt_core/base.html
+++ b/tt_core/templates/tt_core/base.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://indestructibletype.com/fonts/Jost.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="{% static 'tt_core/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'tt_core/skeleton.css' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'tt_core/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'tt_core/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'tt_core/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'tt_core/site.webmanifest' %}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
 
