Began adding image css

--- a/tt_core/static/tt_core/skeleton.css
+++ b/tt_core/static/tt_core/skeleton.css
@@ -450,6 +450,14 @@ hr {
   clear: both; }
 
 
+/* Images etc
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+img {
+  max-width: 75%;
+}
+
+
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /*
