removed now hopefully redundant sixing on images for submissions

--- a/tt_core/templates/tt_core/mission.html
+++ b/tt_core/templates/tt_core/mission.html
@@ -82,7 +82,7 @@
             <source src="{{ sub.extra_content.url }}" width="320" height="320" type="{{ sub.mime }}">
         </video>
         {% else %}
-        <img height="480" width="320" src="{{sub.extra_content.url}}"/>
+        <img src="{{sub.extra_content.url}}"/>
         {% endif %}
         {% endif %}
     </div>
