--- a/tt_core/templates/tt_core/profile.html
+++ b/tt_core/templates/tt_core/profile.html
@@ -19,8 +19,8 @@
     <div class="eleven columns">{{ sub.submitted_by.username }}{% if sub.tweak_url %} submitted something <a href="{{ sub.tweak_url }}">here.</a>{% else %} made a submission.{% endif %}</div>
     {% if sub.extra_content %}
     {% if sub.is_video %}
-    <video controls>
-        <source src="{{ sub.extra_content.url }}" width="480" height="320" type="{{ sub.mime }}">
+    <video controls playsinline>
+        <source src="{{ sub.extra_content.url }}" width="320" height="320" type="{{ sub.mime }}">
     </video>
     {% else %}
     <img src="{{sub.extra_content.url}}"/>
