improved comment buttons

--- a/tt_core/templates/tt_core/base.html
+++ b/tt_core/templates/tt_core/base.html
@@ -21,7 +21,7 @@
 <div class="container">
     <div class="row">
         <div class="eleven columns" style="margin-top: 5rem">
-            <h1>TweakToday</h1>
+            <a href="/"><h1>TweakToday</h1></a>
         </div>
     </div>
     {% include 'tt_core/nav.html' %}
