Fixed mission profile submission text not showing

--- a/tt_core/templates/tt_core/profile.html
+++ b/tt_core/templates/tt_core/profile.html
@@ -32,6 +32,9 @@
     {% endif %}
 </div>
 <div class="row">
+    <div class="two-thirds column"><p>They said: <i>{{ sub.submission_explainer }}</i></p></div>
+</div>
+<div class="row">
     <div class="six columns">
         <form action="{% url 'tt_core:view_comments' sub.pk %}">
             <input type="submit" value="Comments"/>
