--- a/tt_core/templates/tt_core/view_comments.html
+++ b/tt_core/templates/tt_core/view_comments.html
@@ -21,7 +21,7 @@
 {% endif %}
 <div class="row">
     <div class="six columns">
-        <p>At {{comment.timestamp}}, {{comment.commenter}} said: </p>
+        <p>At {{comment.timestamp}}, <a href="{% url 'tt_core:profile' comment.commenter %}">{{comment.commenter}}</a> said: </p>
     </div>
 </div>
 <div class="row">
