Beginnings of markdown filters, improved past mission submission ordering

--- a/tt_core/templates/tt_core/base.html
+++ b/tt_core/templates/tt_core/base.html
@@ -24,6 +24,7 @@
             <a href="/"><h1>TweakToday</h1></a>
         </div>
     </div>
+    {% load markdown_extras %}
     {% include 'tt_core/nav.html' %}
     {% block content %}
     {% endblock %}
