Added contributions page

--- a/tt_core/templates/tt_core/index.html
+++ b/tt_core/templates/tt_core/index.html
@@ -3,7 +3,7 @@
 {% block special_text %}
 <div class="row">
     <div class="nine columns">
-        <span class="embossed"><p>Welcome to TweakToday!</p></span>
+        <span class="embossed"><p>Welcome to TweakToday! You can contribute by <a href="{% url 'tt_core:contribute' %}">reading the known issues and feature requests here</a> — whether you're tech-y or not!</p></span>
     </div>
 </div>
 {% endblock %}
