--- a/tt_core/templates/tt_core/contribute.html
+++ b/tt_core/templates/tt_core/contribute.html
@@ -24,7 +24,7 @@
         <ul>
             <li>There is no code of conduct</li>
             <li>There is no about page</li>
-            <li>Comments appear in the wrong choronological order</li>
+            <li><strike>Comments appear in the wrong choronological order</strike></li>
             <li>Photos uploaded from iPhones rotate incorrectly on desktops</li>
             <li>View code needs to be cleaned up</li>
             <li>Edit / delete functionality is missing</li>
@@ -66,7 +66,7 @@
 <div class="row">
     <nine class="columns">
         <ul>
-            <li>Fix the comment order!</li>
+            <li><strike>Fix the comment order!</strike></li>
             <li>If anybody can figure out how to fix mobile-captured photo rotation when displayed on desktop I'll be forever in your debt. They get spun 90º clockwise. Why?</li>
             <li>See if you can implement content deletion! Definitely not too hard, if I get around to it I'll implement this, but if you can beat me to it please do!<br/>
             If you <i>do</i> attack this, remember how files are managed. If somebody deletes their content the file should also be deleted from the server. Files are stored in the DB as paths to files on disk, so you need to delete that file, <i>then</i> the content.</li>
