--- a/tt_core/templates/tt_core/view_comments.html
+++ b/tt_core/templates/tt_core/view_comments.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row">
-    <div class="eleven columns">{{ sub.submitted_by.username }}{% if sub.tweak_url %} submitted something <a href="{{ sub.tweak_url }}">here.</a>{% else %} made a submission.{% endif %}</div>
+    <div class="eleven columns"><a href="{% url 'tt_core:profile' sub.submitted_by.username %}">{{ sub.submitted_by.username }}</a>{% if sub.tweak_url %} submitted something <a href="{{ sub.tweak_url }}">here.</a>{% else %} made a submission.{% endif %}</div>
     {% if sub.extra_content %}
     {% if sub.is_video %}
     <video controls playsinline>
