Added photo commenting to contribute page

--- a/tt_core/templates/tt_core/contribute.html
+++ b/tt_core/templates/tt_core/contribute.html
@@ -25,6 +25,7 @@
             <li>There is no code of conduct</li>
             <li>There is no about page</li>
             <li><strike>Comments appear in the wrong choronological order</strike></li>
+            <li>Photo commenting</li>
             <li>Photos uploaded from iPhones rotate incorrectly on desktops</li>
             <li>View code needs to be cleaned up</li>
             <li>Edit / delete functionality is missing</li>
@@ -67,6 +68,7 @@
     <nine class="columns">
         <ul>
             <li><strike>Fix the comment order!</strike></li>
+            <li>Photo commenting</li>
             <li>If anybody can figure out how to fix mobile-captured photo rotation when displayed on desktop I'll be forever in your debt. They get spun 90º clockwise. Why?</li>
             <li>See if you can implement content deletion! Definitely not too hard, if I get around to it I'll implement this, but if you can beat me to it please do!<br/>
             If you <i>do</i> attack this, remember how files are managed. If somebody deletes their content the file should also be deleted from the server. Files are stored in the DB as paths to files on disk, so you need to delete that file, <i>then</i> the content.</li>
