Added text for empty profiles

--- a/tt_core/templates/tt_core/profile.html
+++ b/tt_core/templates/tt_core/profile.html
@@ -41,6 +41,12 @@
         </form>
     </div>
 </div>
+{% empty %}
+<div class="row">
+    <div class="nine columns">
+        <p><i>They haven't actually submitted anything yet!</i></p>
+    </div>
+</div>
 {% endfor %}
 
 
