--- a/tt_core/templates/tt_core/suggestions.html
+++ b/tt_core/templates/tt_core/suggestions.html
@@ -62,6 +62,9 @@
 {% endif %}
 
 {% for suggestion in suggs %}
+    {% if not forloop.first %}
+    <hr>
+    {% endif %}
     <div class="row{% if forloop.counter == 1 %} embossed{% endif %}" style="margin-bottom: 4rem">
         <div class="seven columns">{{ suggestion.task_text }}</div>
         <div class="two columns"><p>{{ suggestion.votes }} votes</p></div>
