--- a/tt_core/templates/tt_core/mission.html
+++ b/tt_core/templates/tt_core/mission.html
@@ -7,24 +7,28 @@
 {% endblock %}
 
 {% if challenge is None %}
-<div class="row">
-    <div class="nine columns">
-        <p>For some reason, this challenge couldn't be retrieved...sorry!</p>
-    </div>
-</div>
-{% else %}
-
-    <div class="row embossed">
-        <div class="nine columns embossed">
-            <span class="embossed">
-            <p>Today's challenge: <i>{{ challenge.task_text }}</i>.</p>
-            </span>
+    <div class="row">
+        <div class="nine columns">
+            <p>For some reason, this challenge couldn't be retrieved...sorry!</p>
         </div>
     </div>
-
+{% else %}
+<div class="embossed" style="margin-bottom: 2rem">
+    <div class="row">
+        <div class="nine columns">
+            <p>Today's challenge: <i>{{ challenge.task_text }}</i>.</p>
+        </div>
+    </div>
     {% if challenge.task_explainer != "" %}
-    <p>Some extra information was submitted with this challenge: <i>{{ challenge.task_explainer }}</i></p>
+    <div class="row">
+        <div class="nine columns">
+            <p><i>{{ challenge.task_explainer }}</i></p>
+        </div>
+    </div>
     {% endif %}
+</div>
+
+
 
     {% if submission_form and user.is_authenticated %}
         <button class="button toggle_submission_form_vis" id="show_button">Submit an entry</button>
