--- a/tt_core/static/tt_core/skeleton.css
+++ b/tt_core/static/tt_core/skeleton.css
@@ -277,8 +277,8 @@ input[type="button"].button-primary:focus {
   background-color: #1EAEDB;
   border-color: #1EAEDB; }
 
-.upvote_button {
-  margin-bottom: 0;
+.voting {
+  margin: 0;
 }
 
 /* Forms
