--- a/tt_core/templates/tt_core/suggestions.html
+++ b/tt_core/templates/tt_core/suggestions.html
@@ -65,28 +65,39 @@
     {% if not forloop.first %}
     <hr>
     {% endif %}
-    <div class="row{% if forloop.counter == 1 %} embossed{% endif %}" style="margin-bottom: 4rem">
+{% if forloop.first %}
+<div class="embossed">
+{% endif %}
+    <div class="row"><!--style="margin-bottom: 4rem">-->
         <div class="seven columns">{{ suggestion.task_text }}</div>
-        <div class="two columns"><p>{{ suggestion.votes }} votes</p></div>
+        <div class="two columns"><p class="voting">{{ suggestion.votes }} votes</p></div>
         {% if user.is_authenticated %}
 
-            {% if user in suggestion.task_voters.all %}
-                <form action="{% url 'tt_core:remove_vote' suggestion.pk %}" method="post" class="remove_vote_button">
-                    {% csrf_token %}
-                    <input type="submit" value="remove vote" name="Submit" id="remove_vote_suggestion_{{suggestion.pk}}"/>
-                </form>
-            {% else %}
-                <form action="{% url 'tt_core:submit_vote' suggestion.pk %}" method="post" class="upvote_button">
-                    {% csrf_token %}
-                    <input type="submit" value="upvote" name="Submit" id="upvote_suggestion_{{suggestion.pk}}"/>
-                </form>
-            {% endif %}
+                <div class="two columns offset-by-one">
+                    {% if user in suggestion.task_voters.all %}
+                    <form action="{% url 'tt_core:remove_vote' suggestion.pk %}" method="post" class="voting">
+                        {% csrf_token %}
+                        <input type="submit" value="remove vote" name="Submit" id="remove_vote_suggestion_{{suggestion.pk}}"/>
+                    </form>
+                    {% else %}
+                    <form action="{% url 'tt_core:submit_vote' suggestion.pk %}" method="post" class="voting">
+                        {% csrf_token %}
+                        <input type="submit" value="upvote" name="Submit" id="upvote_suggestion_{{suggestion.pk}}"/>
+                    </form>
+                    {% endif %}
+                </div>
 
         {% endif %}
-
-
-        {% if suggestion.task_explainer %}<div class="nine columns"><i>{{ suggestion.task_explainer }}</i></div>{% endif %}
     </div>
+
+    {% if suggestion.task_explainer %}
+    <div class="row">
+        <div class="nine columns"><i>{{ suggestion.task_explainer }}</i></div>
+    </div>
+    {% endif %}
+{% if forloop.first %}
+</div>
+{% endif %}
 {% empty %}
 There are no suggested tweaks right now!
 {% endfor %}
