Fixed commenting layouts a bit

--- a/tt_core/templates/tt_core/view_comments.html
+++ b/tt_core/templates/tt_core/view_comments.html
@@ -23,7 +23,7 @@
 {% endif %}
 <div class="row">
     <div class="six columns">
-        <p>At {{comment.timestamp}}, <a href="{% url 'tt_core:profile' comment.commenter %}">{{comment.commenter}}</a> said: </p>
+        At {{comment.timestamp}}, <a href="{% url 'tt_core:profile' comment.commenter %}">{{comment.commenter}}</a> said:
     </div>
 </div>
 <div class="row">
