Improved vertical container spacing

--- a/tt_core/templates/tt_core/base.html
+++ b/tt_core/templates/tt_core/base.html
@@ -20,7 +20,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="eleven columns" style="margin-top: 5rem">
+        <div class="eleven columns">
             <a href="/"><h1>TweakToday</h1></a>
         </div>
     </div>
