--- a/tt_core/static/tt_core/skeleton.css
+++ b/tt_core/static/tt_core/skeleton.css
@@ -40,7 +40,7 @@
   position: relative;
   width: 100%;
   max-width: 960px;
-  margin: 0 auto;
+  margin: 5rem auto;
   padding: 0 20px;
   box-sizing: border-box; }
 .column,
