--- a/tt_core/templates/tt_core/view_comments.html
+++ b/tt_core/templates/tt_core/view_comments.html
@@ -28,7 +28,7 @@
 </div>
 <div class="row">
     <div class="nine columns">
-        <p><i>{{comment.comment_text|markdown|safe}}</i></p>
+        {{comment.comment_text|markdown|safe}}
     </div>
 </div>
 {% endfor %}
