--- a/tt_core/static/tt_core/skeleton.css
+++ b/tt_core/static/tt_core/skeleton.css
@@ -282,14 +282,18 @@ input[type="button"].button-primary:focus {
 
 /* Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+textarea,
+input[type="url"] {
+  background-color: transparent;
+  border: 1px solid #bbb;
+  border-radius: 4px;
+}
 input[type="email"],
 input[type="number"],
 input[type="search"],
 input[type="text"],
 input[type="tel"],
-input[type="url"],
 input[type="password"],
-textarea,
 select {
   display: inline-block;
   padding: 0.15rem 0.1rem;
