Added backburner, sorting, and message of the day tags

--- a/tt_core/static/tt_core/skeleton.css
+++ b/tt_core/static/tt_core/skeleton.css
@@ -439,7 +439,9 @@ form {
   float: right; }
 .u-pull-left {
   float: left; }
-
+.hide {
+  display: none;
+}
 
 /* Misc
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
