--- a/tt_core/templates/tt_core/suggestions.html
+++ b/tt_core/templates/tt_core/suggestions.html
@@ -77,7 +77,7 @@
     {% endif %}
     {% if suggestion is next_up %}
     <div class="embossed">
-        {% endif %}
+    {% endif %}
         <div class="row"><!--style="margin-bottom: 4rem">-->
             <div class="seven columns">{{ suggestion.task_text }}</div>
             <div class="two columns"><p class="voting">{{ suggestion.votes }} votes</p></div>
@@ -105,7 +105,7 @@
             <div class="nine columns"><i>{{ suggestion.task_explainer }}</i></div>
         </div>
         {% endif %}
-        {% if forloop.first %}
+    {% if suggestion is next_up %}
     </div>
     {% endif %}
     {% empty %}
@@ -148,7 +148,7 @@
             <div class="nine columns"><i>{{ suggestion.task_explainer }}</i></div>
         </div>
         {% endif %}
-        {% if forloop.first %}
+        {% if suggestion is next_up %}
     </div>
     {% endif %}
     {% empty %}
@@ -161,9 +161,9 @@
     {% if not forloop.first %}
     <hr>
     {% endif %}
-    {% if forloop.first %}
+    {% if suggestion is next_up %}
     <div class="embossed">
-        {% endif %}
+    {% endif %}
         <div class="row"><!--style="margin-bottom: 4rem">-->
             <div class="seven columns">{{ suggestion.task_text }}</div>
             <div class="two columns"><p class="voting">{{ suggestion.votes }} votes</p></div>
@@ -191,7 +191,7 @@
             <div class="nine columns"><i>{{ suggestion.task_explainer }}</i></div>
         </div>
         {% endif %}
-        {% if forloop.first %}
+    {% if suggestion is next_up %}
     </div>
     {% endif %}
     {% empty %}
